[package]
name = "rust_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
bcrypt = "0.15"
chrono = { version = "0.4.43", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio"] }
thiserror = "2.0.18"
time = "0.3"
tokio = { version = "1.49.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.6.8", features = ["cors", "full"] }
tower-sessions = "0.12"
tower-sessions-sqlx-store = { version = "0.12", features = ["sqlite"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.19.0", features = ["v4", "serde"] }
webauthn-rs = { version = "0.5.4", features = ["danger-allow-state-serialisation"] }
